tasksel (2.19) UNRELEASED; urgency=low

  * Christian Perrier
    - Fix typo in README. Closes: #286053
    - Add missing languages in Makefile. Closes: #286539
  * Joey Hess
    - Don't require whitespace after keys with multiline values. Closes: #286054
  * Translations
    - Bosnian translation updates by Safir Secerovic

 -- Christian Perrier <bubulle@kheops.frmug.org>  Fri, 17 Dec 2004 09:58:18 +0100

tasksel (2.18) unstable; urgency=low

  * Joey Hess
    - Comment out mysell-* from all language tasks to work around bug #283923.
      Closes: #285881

 -- Joey Hess <joeyh@debian.org>  Thu, 16 Dec 2004 22:11:08 -0500

tasksel (2.17) unstable; urgency=low

  * Joey Hess
    - Don't clear screen in test mode.
    - Fix behavior of tasks whose test script returns 2 in --new-install mode; 
      do not install these tasks if the user de-selects them. Closes: #284895

 -- Joey Hess <joeyh@debian.org>  Thu,  9 Dec 2004 14:25:25 -0500

tasksel (2.16) unstable; urgency=low

  * Translations:
    - Welsh updates in po/ and tasks/po. Welsh translation for debian/po
      added. Closes: #282181
  * Christian Perrier
    - Fix double spaces in some tasks descriptions
    - Fix ending dot in chinese-t-desktop
      Closes: #282182
    - Unfuzzy translations as translators obviously didn't
      follow inconsistencies

 -- Joey Hess <joeyh@debian.org>  Mon,  6 Dec 2004 18:12:09 -0500

tasksel (2.15) unstable; urgency=high

  * Joey Hess
    - Fix email address. Closes: #276031
    - Drop apparently useless libecpg4 from database-server. Closes: #275890
    - Reduce set of kde stuff that is key for the desktop task, in an attempt
      to make CD 1 continue to fit, similar to what was done with gnome
      earlier.

 -- Joey Hess <joeyh@debian.org>  Thu, 11 Nov 2004 22:19:50 -0500

tasksel (2.14) unstable; urgency=medium

  * Joey Hess
    - Add mozilla-xft to desktop task, needed for antialiasing in gnome
      browser as well as mozilla.
